--- a/VQCSDK/res/layout/layout_payment.xml
+++ b/VQCSDK/res/layout/layout_payment.xml
@@ -97,7 +97,8 @@
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
             android:singleLine="true"   
-            android:textColor="#000"         
+            android:textColor="#000"   
+            android:inputType="number"      
             />
     </LinearLayout>     
     
